--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GIT</title>
 </head>
 <body>
-    <h1>hello World!!!</h1>
+    <h1>Hello World!!!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis ea voluptatem amet possimus recusandae aperiam debitis magnam officiis et perferendis placeat numquam animi quod sit minus, blanditiis tempora aliquid eligendi!</p>
 </body>
 </html>
