Colaborador agrego 3 lineas en section

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>    que estas estudiando????</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis ea voluptatem amet possimus recusandae aperiam debitis magnam officiis et perferendis placeat numquam animi quod sit minus, blanditiis tempora aliquid eligendi!</p>
+    <section>
+        YO colaborador agrego nueva seccion
+    </section>
 </body>
 </html>
