ADMIN agrega el Footer

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <section>
         YO colaborador agrego nueva seccion
     </section>
+    <footer>
+        Esto es un footer agregado por ADMIN
+    </footer>
 </body>
 </html>
