--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>GIT</title>
-</head>
-<body>
-    <h1>    que estas estudiando????</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis ea voluptatem amet possimus recusandae aperiam debitis magnam officiis et perferendis placeat numquam animi quod sit minus, blanditiis tempora aliquid eligendi!</p>
+  </head>
+  <body>
+    <h1>que estas estudiando????</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis ea
+      voluptatem amet possimus recusandae aperiam debitis magnam officiis et
+      perferendis placeat numquam animi quod sit minus, blanditiis tempora
+      aliquid eligendi!
+    </p>
+    <section>YO colaborador agrego nueva seccion</section>
     <section>
-        YO colaborador agrego nueva seccion
+      <h1>COLA agrega section</h1>
+      <h2>Agrego subtitulo</h2>
+      <p>Agrego descripcion</p>
     </section>
-</body>
+  </body>
 </html>
