COLABORADOR agrego en DEVELOP una section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <h2>Agrego subtitulo</h2>
       <p>Agrego descripcion</p>
     </section>
+    <section>COLABORADOR agrego en DEVELOP una section</section>
   </body>
 </html>
     <footer>
