--- a/index.html
+++ b/index.html
@@ -3,28 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>GIT</title>
+    <title>JS-01_Clase14</title>
+    <!-- <script src="./js/script.js"></script> -->
   </head>
   <body>
-    <h1>que estas estudiando????</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis ea
-      voluptatem amet possimus recusandae aperiam debitis magnam officiis et
-      perferendis placeat numquam animi quod sit minus, blanditiis tempora
-      aliquid eligendi!
-    </p>
-    <section>YO colaborador agrego nueva seccion</section>
-    <section>
-      <h1>COLA agrega section</h1>
-      <h2>Agrego subtitulo</h2>
-      <p>Agrego descripcion</p>
-    </section>
-    <section>COLABORADOR agrego en DEVELOP una section</section>
+     <script>
+      /*   JUAN ARIELLLLLLLLLLLLLLLLLLLLLL
+      var nombre = prompt("Ingrese su nombre", "");
+      if (nombre == "juan") document.write("Cornudoooo");
+      else document.write("Uhhh me da???"); */
+
+      var nota = prompt("Ingrese su nota", "");
+      // Condición (si nota es mayor o igual a 5)
+      var calificacion = nota < 5 ? "suspendido" : "aprobado";
+  
+document.write("Estás " + calificacion + "!!!");
+    </script>
   </body>
-</html>
-    <footer>
-        Esto es un footer agregado por ADMIN
-    </footer>
-</body>
 </html>
