Isabella nombre nota

--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
     <!-- <script src="./js/script.js"></script> -->
   </head>
   <body>
-     <script>
-      /*   JUAN ARIELLLLLLLLLLLLLLLLLLLLLL
-      var nombre = prompt("Ingrese su nombre", "");
-      if (nombre == "juan") document.write("Cornudoooo");
-      else document.write("Uhhh me da???"); */
-
-      var nota = prompt("Ingrese su nota", "");
-      // Condición (si nota es mayor o igual a 5)
-      var calificacion = nota < 5 ? "suspendido" : "aprobado";
+    <h1>
+      <script>
+        /*   JUAN ARIELLLLLLLLLLLLLLLLLLLLLL
+        var nombre = prompt("Ingrese su nombre", "");
+        if (nombre == "juan") document.write("Cornudoooo");
+        else document.write("Uhhh me da???"); */
   
-document.write("Estás " + calificacion + "!!!");
-    </script>
+        var nota = prompt("Ingresá tu nota de examen Isabella", "");
+        // Condición (si nota es mayor o igual a 5)
+        var calificacion = nota < 5 ? "suspendido" : "aprobado";
+    
+  document.write("Estás " + calificacion + "!!!");
+      </script>
+
+
+
+
+
+
+
+    </h1>
+     
   </body>
 </html>
