Isabella nombre nota1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
         var nota = prompt("Ingresá tu nota de examen Isabella", "");
         // Condición (si nota es mayor o igual a 5)
-        var calificacion = nota < 5 ? "suspendido" : "aprobado";
+        var calificacion = nota < 5 ? "suspendida querida" : "aprobada querida";
     
   document.write("Estás " + calificacion + "!!!");
       </script>
