agregue bucle FOR de clase 14

--- a/index.html
+++ b/index.html
@@ -7,27 +7,13 @@
     <!-- <script src="./js/script.js"></script> -->
   </head>
   <body>
-    <h1>
+    <h2>
       <script>
-        /*   JUAN ARIELLLLLLLLLLLLLLLLLLLLLL
-        var nombre = prompt("Ingrese su nombre", "");
-        if (nombre == "juan") document.write("Cornudoooo");
-        else document.write("Uhhh me da???"); */
-  
-        var nota = prompt("Ingresá tu nota de examen Isabella", "");
-        // Condición (si nota es mayor o igual a 5)
-        var calificacion = nota < 5 ? "suspendida querida" : "aprobada querida";
-    
-  document.write("Estás " + calificacion + "!!!");
+        i = parseInt(prompt("Ingrese numero a sumar de a 2 hasta 100"));
+        for (var i; i <= 100; i += 2)
+          document.write("Valor suma de a dos: " + i + "<br>");
       </script>
-
-
-
-
-
-
-
-    </h1>
-     
+      <br />
+    </h2>
   </body>
 </html>
